--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,6 +1,28 @@
 .text-center{
-    background-color: #CEDEBD;
+    background: linear-gradient(-60deg, #ea8532, #cb8b00, #ffc400);
+	background-size: 400% 400%;
+	animation: gradient 5s ease infinite;
+	height: 85vh;
 }
+
+.footer{
+    background: linear-gradient(-60deg, #ba5c0f, #cb8b00, #fff200);
+	background-size: 400% 400%;
+	animation: gradient 5s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 
 .lead{
     font-family: 'Lato', sans-serif;
@@ -15,7 +37,7 @@ span{
 }
 
 #bio{
-    background-color: #b5b254;
+    background: linear-gradient(-60deg, #ffb300, #feb71f, #be7602);
 }
 
 #robot{
